src/styles/table.scss
@import "../../node_modules/bulma/sass/utilities/mixins.sass";

table.summary-table {
  font-size: 0.8rem;

  caption {
    font-family: $header-font-family;
    text-align: left;
    font-weight: 600;
    font-size: 1rem;
    color: #000;
    border-bottom: 1px solid #000;
    text-transform: uppercase;
    padding: 0.25em 0.5em;
  }

  tbody tr:last-child td,
  tbody tr:last-child th {
    border-bottom-width: 1px;
  }

  td.hovered, th.hovered {
    background-color: rgba(255,255,255, 0.4);
  }

  td, th {
    font-size: 1em;

    @include desktop {
      // font-size: 1em;
    }
  }

  .column-header {
    font-family: $header-font-family;
    font-size: 0.9em;
    color: #000;

    span {
      display: block;
    }

    small {
      color: #999;
    }
  }
  .row-header {
    font-family: $header-font-family;
  }

  .row-label {
    @include desktop {
      white-space: nowrap;
    }
  }

  .cell-value {
    font-family: $numbers-font-family;
    text-align: right;
  }

  .source-colour {
    width: 17px;
    height: 17px;
    background-color: rgba(255,255,255,.8);
    display: inline-block;
    vertical-align: text-bottom;
    margin-right: 0.1rem;

    @include desktop {
      // width: 17px;
      // height: 17px;
    }
  }

  th.group-selector {
    padding-top: 5px;
    padding-left: 0;
  }

  .date-value {
    display: block;
    font-family: $primary-font-family;
    font-size: 0.6rem;
  }

  &.legend-table {
    font-size: 0.65rem;

    .source-colour {
      width: 10px;
      height: 10px;
      vertical-align: middle;
    }
  }

  tr.row-separator {
    td, th {
      border-bottom: 1px solid #000;
    }
  }
}

